# packages/api-client/openapi.json
@@ -142,7 +142,11 @@
                       "type": "string"
                     },
                     "pseudo": {
+                      "nullable": true,
                       "type": "string"
+                    },
+                    "hasBirthDate": {
+                      "type": "boolean"
                     },
                     "role": {
                       "type": "string",
@@ -188,6 +192,7 @@
                     "id",
                     "email",
                     "pseudo",
+                    "hasBirthDate",
                     "role",
                     "city",
                     "xp",
@@ -196,6 +201,40 @@
                 }
               }
             }
+          }
+        },
+        "tags": [
+          "users"
+        ]
+      }
+    },
+    "/me/birth-date": {
+      "post": {
+        "operationId": "UsersController_setBirthDate",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "birthDate": {
+                    "type": "string",
+                    "format": "date",
+                    "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))$"
+                  }
+                },
+                "required": [
+                  "birthDate"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": ""
           }
         },
         "tags": [
